-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0 Alpha
-
None
-
920472c85f6a5cd96344c28dbba0f199c34c6c10
QTBUG-45860 fixed the biggest issues with clipping render-to-texture widgets. However, one particular case remains broken: when a widget is completely clipped away, it will still show up if there happen to be neighbouring QOpenGL/QuickWidgets around the scroll area.
This is likely because of the incorrect interpretation of QWidgetPrivate::clipRect. Based on reading various QWidget code, it seems an empty rect indicates clip away completely, instead of no clipping. Currently the composition code in the backingstores interprets empty clipRects as no clipping needed.
Reproducible with a modified qopenglwidget example.
- resulted from
-
QTBUG-45860 QOpenGLWidget and QQuickWidget fail to apply clipping
-
- Closed
-