Fix clipRect interpretation in composited backingstores

Empty clipRect means "clip away completely", not "no clipping".

Task-number: QTBUG-50719
Change-Id: I6a9dd66130716a921fe9fc245582274e3c9718fe
Reviewed-by: Paul Olav Tvete <paul.tvete@theqtcompany.com>