src/platformsupport/platformcompositor/qopenglcompositor.cpp
@@ -177,11 +177,11 @@ static inline QRect toBottomLeftRect(const QRect &topLeftRect, int windowHeight)
 
 static void clippedBlit(const QPlatformTextureList *textures, int idx, const QRect &targetWindowRect, QOpenGLTextureBlitter *blitter)
 {
-    const QRect rectInWindow = textures->geometry(idx);
-    QRect clipRect = textures->clipRect(idx);
+    const QRect clipRect = textures->clipRect(idx);
     if (clipRect.isEmpty())
-        clipRect = QRect(QPoint(0, 0), rectInWindow.size());
+        return;
 
+    const QRect rectInWindow = textures->geometry(idx);
     const QRect clippedRectInWindow = rectInWindow & clipRect.translated(rectInWindow.topLeft());
     const QRect srcRect = toBottomLeftRect(clipRect, rectInWindow.height());
 
